# clusterinspector

./: .gitignore  README.md  pyproject.toml
docs/: adr-template.md  cluster-validation.md  decisions.md  development.md  fabric.md  probe-reference.md  profile.md  roadmap.md
docs/adr/: README.md
src/clusterinspector/: cli.py
src/clusterinspector/core/: __init__.py  batch.py  commands.py  confidence.py  evidence.py  host_resolver.py  local.py  models.py  parsing.py  runner.py  ssh.py  timeouts.py
src/clusterinspector/fabric/: cli.py  diagnosis.py  orchestrator.py
src/clusterinspector/fabric/classify/: fabrics.py  health.py  impact.py
src/clusterinspector/fabric/output/: human.py  jsonout.py  markdown.py
src/clusterinspector/fabric/probes/: drivers.py  gpu.py  interfaces.py  libfabric.py  pci.py  rdma.py
src/clusterinspector/generate/: cli.py
src/clusterinspector/profile/: cli.py  orchestrator.py  schema.py
src/clusterinspector/profile/classify/: externals.py  ownership.py  risks.py  stackclass.py
src/clusterinspector/profile/output/: human.py  jsonout.py  markdown.py  spackpackages.py  yamlout.py
src/clusterinspector/profile/probes/: compiler.py  fabric.py  gpu.py  modules.py  mpi.py  system.py
tests/: test_fabric_classify.py  test_fabric_health_impact.py  test_gpu_probe_helpers.py  test_human_output.py  test_interfaces_probe.py  test_parsing.py  test_probe_helpers.py  test_profile_cli.py  test_profile_orchestrator.py  test_profile_output.py
