[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterinspector"
version = "0.1.0"
description = "Passive fabric and platform profile inspection for Linux clusters"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cluster Inspector" }]
dependencies = []

[project.scripts]
clusterinspector = "clusterinspector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
